2024-01-10T00:41:53Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7468720093 # 9
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-10
* notice: last 14d: unq all: 3 14
* notice: prev accum: outdated-unq outdated-all / unq all: 289 1017 / 292 1029
* notice: next accum: outdated-unq outdated-all / unq all: 290 1019 / 293 1033
* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -0 -0 / +1 +4 -0 -0 / 1 4
* notice: removed / changed dates: [2023-12-26] / [2024-01-09]

2024-01-07T08:10:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7436991586 # 1
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-07
* notice: last 14d: unq all: 3 12
* notice: prev accum: outdated-unq outdated-all / unq all: 284 992 / 289 1017
* notice: next accum: outdated-unq outdated-all / unq all: 289 1017 / 292 1029
* notice: prev exec diff / last date diff / accum: unq all: +3 +12 -0 -0 / +1 +6 -0 -0 / 1 6
* notice: removed / changed dates: [2023-11-03 2023-11-05 2023-11-06 2023-11-07 2023-11-09] / [2023-12-26 2024-01-03 2024-01-05]

2023-11-13T08:21:54Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6847359284 # 1343
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-13
* notice: last 14d: unq all: 4 25
* notice: prev accum: outdated-unq outdated-all / unq all: 283 988 / 289 1017
* notice: next accum: outdated-unq outdated-all / unq all: 284 992 / 289 1017
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-10-30] / []

2023-11-10T01:13:23Z: