@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-10T00:41:53Z",
+  "timestamp" : "2024-01-10T08:11:52Z",
   "count_outdated" : 1019,
   "uniques_outdated" : 290,
-  "count" : 1033,
-  "uniques" : 293,
+  "count" : 1035,
+  "uniques" : 294,
   "views" : [
     {
       "timestamp": "2024-01-03T00:00:00Z",
@@ -28,6 +28,15 @@
       "count": 4,
       "count_minmax": [ 4, 4 ],
       "count_decinc": [ 0, 4 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-01-10T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
