@@ -1,6 +1,6 @@
 {
-  "count": 14,
-  "uniques": 3,
+  "count": 16,
+  "uniques": 4,
   "views": [
     {
       "timestamp": "2024-01-03T00:00:00Z",
@@ -15,6 +15,11 @@
     {
       "timestamp": "2024-01-09T00:00:00Z",
       "count": 4,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-01-10T00:00:00Z",
+      "count": 2,
       "uniques": 1
     }
   ]
