@@ -1,3 +1,12 @@
+2024-01-10T08:11:52Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7472015623 # 10
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-10
+* notice: last 14d: unq all: 4 16
+* notice: prev accum: outdated-unq outdated-all / unq all: 290 1019 / 293 1033
+* notice: next accum: outdated-unq outdated-all / unq all: 290 1019 / 294 1035
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2024-01-10]
+
 2024-01-10T00:41:53Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7468720093 # 9
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-10
